--- a/index.html
+++ b/index.html
@@ -117,11 +117,23 @@
           <li>✓ AI Act-certifieringshjälp</li>
           <li>✓ Egen SLA</li>
         </ul>
-        <a href="https://buy.stripe.com/8x29AT4VTdmS9OBbyG93y02" class="block w-full py-2 bg-[#00ffff] text-black font-semibold rounded hover:opacity-90 transition">Kontakta sälj</a>
+        <a href="<a href="#contact" ..." class="block w-full py-2 bg-[#00ffff] text-black font-semibold rounded hover:opacity-90 transition">Kontakta sälj</a>
         <div class="absolute top-3 right-3 bg-[#00ffff] text-black text-xs font-bold px-2 py-1 rounded-full">Skräddarsydd</div>
       </div>
     </div>
   </section>
+  
+  <section id="contact" class="px-6 py-20 bg-gray-950/80">
+  <h2 class="text-3xl font-bold text-white text-center mb-6">Kontakta oss</h2>
+  <p class="text-center text-gray-400 max-w-xl mx-auto mb-8">Fyll i formuläret nedan så återkommer vi så snart som möjligt.</p>
+  <form action="mailto:support@sentinelstack.tech" method="POST" class="max-w-xl mx-auto bg-white/5 p-6 rounded-lg space-y-4">
+    <input type="text" name="name" placeholder="Namn" required class="w-full p-3 rounded bg-gray-800 text-white border border-gray-600 focus:outline-none focus:ring-2 focus:ring-[#00ffff]">
+    <input type="email" name="email" placeholder="E-post" required class="w-full p-3 rounded bg-gray-800 text-white border border-gray-600 focus:outline-none focus:ring-2 focus:ring-[#00ffff]">
+    <textarea name="message" rows="4" placeholder="Ditt meddelande" required class="w-full p-3 rounded bg-gray-800 text-white border border-gray-600 focus:outline-none focus:ring-2 focus:ring-[#39ff14]"></textarea>
+    <button type="submit" class="w-full py-3 bg-[#00ffff] text-black font-semibold rounded hover:bg-[#39ff14] transition">Skicka</button>
+  </form>
+ 
+</section>
 
   <section id="trust" class="px-6 py-16 bg-transparent">
     <h2 class="text-xl sm:text-3xl font-bold text-white text-center mb-8">Betrodd av innovativa företag</h2>
