--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <li>✓ AI Act-certifieringshjälp</li>
           <li>✓ Egen SLA</li>
         </ul>
-        <a href="<a href="#contact" ..." class="block w-full py-2 bg-[#00ffff] text-black font-semibold rounded hover:opacity-90 transition">Kontakta sälj</a>
+<a href="#contact" class="block w-full py-2 bg-[#00ffff] text-black font-semibold rounded hover:opacity-90 transition">Kontakta oss</a>
         <div class="absolute top-3 right-3 bg-[#00ffff] text-black text-xs font-bold px-2 py-1 rounded-full">Skräddarsydd</div>
       </div>
     </div>
