--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <section id="pricing" class="px-6 py-16 bg-gray-900/50">
     <h2 class="text-2xl sm:text-4xl font-bold text-white text-center mb-12">Prissättning</h2>
     <div class="max-w-4xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8 items-start">
-      <div class="relative p-8 bg-white/10 backdrop-blur-lg rounded-xl border border-white/20 text-center text-white" data-aos="fade-up">
+<div class="relative p-8 bg-white/10 backdrop-blur-lg rounded-xl border border-white/20 text-center text-white scale-105 shadow-lg" data-aos="fade-up">
         <h3 class="text-xl font-semibold mb-2">Starter</h3>
         <p class="text-5xl font-extrabold mb-4">0 kr<span class="text-lg font-normal text-gray-300">/månad</span></p>
         <ul class="text-left text-gray-200 mb-6 space-y-2">
