--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <a href="#features" class="text-gray-300 hover:text-white transition">Funktioner</a>
       <a href="#pricing" class="text-gray-300 hover:text-white transition">Priser</a>
       <a href="#trust" class="text-gray-300 hover:text-white transition">Betrodd av</a>
-      <a href="contact" class="text-gray-300 hover:text-white transition">Kontakt</a>
+      <a href="#contact" class="text-gray-300 hover:text-white transition">Kontakt</a>
     </nav>
     <div class="md:hidden">
       <button class="text-gray-300 focus:outline-none hover:text-white">
