--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
+    html {
+      scroll-behavior: smooth;
+    }
     .hero-section {
       background: radial-gradient(circle at 20% 30%, rgba(0, 255, 255, 0.15), transparent 60%), 
                   radial-gradient(circle at 80% 60%, rgba(57, 255, 20, 0.15), transparent 60%), 
