--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
       <!-- Video or demo content -->
       <div class="p-4">
         <div class="aspect-w-16 aspect-h-9">
-          <iframe class="w-full h-full" src="https://www.youtube.com/embed/E75Prloilko" title="Demo Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe class="w-full h-full" src="placeholder" title="Demo Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
       </div>
     </div>
