--- a/index.html
+++ b/index.html
@@ -60,14 +60,31 @@
     <!-- Glowing background element (blurred gradient blob for neon effect) -->
     <div class="absolute inset-0 bg-gradient-to-br from-cyan-500 to-green-500 opacity-20 blur-3xl"></div>
     <div class="relative z-10 max-w-3xl mx-auto">
-      <h1 class="text-4xl md:text-5xl font-bold mb-6">Säker AI, trygg compliance</h1>
-      <p class="text-xl md:text-2xl text-gray-300 mb-8">
-        SentinelStack hjälper ditt företag att uppfylla AI Act och skydda data<br class="hidden md:block">
-        genom intelligent övervakning och automatiserade kontroller.
-      </p>
-      <div class="flex flex-col md:flex-row items-center justify-center space-y-4 md:space-y-0 md:space-x-6">
-        <a href="#signup" class="px-6 py-3 bg-green-500 text-black font-semibold text-lg rounded shadow-green-500/50 shadow-md hover:bg-green-400 transition">Kom igång gratis</a>
-        <button id="demo-btn-hero" class="px-6 py-3 border border-cyan-400 text-cyan-400 text-lg rounded hover:bg-cyan-400 hover:text-black transition">Se en demo</button>
+<h1 class="text-4xl md:text-5xl font-bold mb-6 neon-text-blue">Säker AI. Trygg compliance.</h1>
+<p class="text-lg md:text-xl text-gray-400 mb-8">
+  AI-övervakning som uppfyller AI Act – automatiskt.
+</p>
+     <div class="flex flex-col md:flex-row items-center justify-center space-y-6 md:space-y-0 md:space-x-6 mt-10">
+  <!-- CTA-knapp 1 -->
+  <a href="#signup" class="px-6 py-3 bg-green-500 text-black font-semibold text-lg rounded shadow-green-500/50 shadow-md hover:bg-green-400 transition">
+    Kom igång gratis
+  </a>
+
+  <!-- CTA-knapp 2 -->
+  <button id="demo-btn-hero" class="px-6 py-3 border border-cyan-400 text-cyan-400 text-lg rounded hover:bg-cyan-400 hover:text-black transition">
+    Se en demo
+  </button>
+
+  <!-- Formulär -->
+  <form action="https://hooks.zapier.com/hooks/catch/17250720/3r8w6qe/" method="POST" class="flex flex-col sm:flex-row items-center gap-3 bg-gray-900 bg-opacity-70 backdrop-blur-md p-4 rounded-xl border border-cyan-500 shadow-md w-full sm:w-auto">
+    <input type="email" name="email" placeholder="Din e-post" required class="px-4 py-2 rounded bg-gray-800 text-white border border-cyan-400 w-64 focus:outline-none focus:ring-2 focus:ring-cyan-500">
+    <button type="submit" class="px-4 py-2 bg-cyan-400 text-black font-semibold rounded hover:bg-cyan-300 transition">
+      Ladda ner PDF
+    </button>
+  </form>
+</div>
+
+
       </div>
     </div>
   </section>
