--- a/index.html
+++ b/index.html
@@ -77,7 +77,13 @@
 
   <!-- Formulär -->
   <form action="https://hooks.zapier.com/hooks/catch/17250720/3r8w6qe/" method="POST" class="flex flex-col sm:flex-row items-center gap-3 bg-gray-900 bg-opacity-70 backdrop-blur-md p-4 rounded-xl border border-cyan-500 shadow-md w-full sm:w-auto">
-    <input type="email" name="email" placeholder="Din e-post" required class="px-4 py-2 rounded bg-gray-800 text-white border border-cyan-400 w-64 focus:outline-none focus:ring-2 focus:ring-cyan-500">
+    <input
+  type="email"
+  name="email"
+  placeholder="Din e-post"
+  required
+  class="w-full sm:w-72 px-4 py-2 rounded bg-gray-900 text-white border border-cyan-400 focus:outline-none focus:ring-2 focus:ring-cyan-500 shadow-cyan-400/30 shadow-inner transition duration-200"
+/>
     <button type="submit" class="px-4 py-2 bg-cyan-400 text-black font-semibold rounded hover:bg-cyan-300 transition">
       Ladda ner PDF
     </button>
