--- a/index.html
+++ b/index.html
@@ -84,9 +84,13 @@
   required
   class="w-full sm:w-72 px-4 py-2 rounded bg-gray-900 text-white border border-cyan-400 focus:outline-none focus:ring-2 focus:ring-cyan-500 shadow-cyan-400/30 shadow-inner transition duration-200"
 />
-    <button type="submit" class="px-4 py-2 bg-cyan-400 text-black font-semibold rounded hover:bg-cyan-300 transition">
-      Ladda ner PDF
-    </button>
+<button
+  type="submit"
+  class="px-4 py-2 bg-cyan-400 text-black font-semibold rounded hover:bg-cyan-300 hover:shadow-lg hover:shadow-cyan-400/40 focus:outline-none focus:ring-2 focus:ring-cyan-500 transition duration-200 animate-glow"
+>
+  Ladda ner PDF
+</button>
+
   </form>
 </div>
 
