--- a/index.html
+++ b/index.html
@@ -250,6 +250,43 @@
   </div>
 </section>
 <!-- Pricing Section -->
+<section id="features" class="max-w-6xl mx-auto py-24 px-6 text-white">
+  <h2 class="text-4xl font-bold text-center mb-16">Allt du behöver för AI Act–compliance. Inbyggt.</h2>
+  <div class="grid md:grid-cols-3 gap-10">
+
+    <div class="bg-gradient-to-b from-gray-900 to-gray-800 border border-gray-700 rounded-2xl p-8 shadow-lg text-center">
+      <div class="mb-4">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 mx-auto text-cyan-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m2 0a8 8 0 11-16 0 8 8 0 0116 0z" />
+        </svg>
+      </div>
+      <h3 class="text-xl font-semibold mb-2">Automatiska Riskanalyser</h3>
+      <p class="text-gray-400 text-sm">Identifiera, kategorisera och rapportera AI-risker enligt EU-standard med ett klick.</p>
+    </div>
+
+    <div class="bg-gradient-to-b from-gray-900 to-gray-800 border border-gray-700 rounded-2xl p-8 shadow-lg text-center">
+      <div class="mb-4">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 mx-auto text-green-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+        </svg>
+      </div>
+      <h3 class="text-xl font-semibold mb-2">Policygenerator i realtid</h3>
+      <p class="text-gray-400 text-sm">Skapa och exportera AI-policys automatiskt baserat på projektets användning och risknivå.</p>
+    </div>
+
+    <div class="bg-gradient-to-b from-gray-900 to-gray-800 border border-gray-700 rounded-2xl p-8 shadow-lg text-center">
+      <div class="mb-4">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 mx-auto text-purple-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405M19 13v-2a8 8 0 10-16 0v2m4 4h8" />
+        </svg>
+      </div>
+      <h3 class="text-xl font-semibold mb-2">Realtidsbevakning & Larm</h3>
+      <p class="text-gray-400 text-sm">Upptäck automatiskt compliance-brott, bias eller högrisk-beteenden i AI-system.</p>
+    </div>
+
+  </div>
+</section>
+
 <section id="pricing" class="max-w-6xl mx-auto py-24 px-6 text-white">
   <h2 class="text-4xl font-bold text-center mb-16">Våra Paket</h2>
   <div class="grid md:grid-cols-3 gap-10">
@@ -296,6 +333,7 @@
     </div>
   </div>
 </section>
+
 
 
 <!-- FAQ Section -->
