--- a/index.html
+++ b/index.html
@@ -287,6 +287,74 @@
   </div>
 </section>
 
+<section id="testimonials" class="max-w-6xl mx-auto py-24 px-6 text-white">
+  <h2 class="text-4xl font-bold text-center mb-16">Vad andra säger</h2>
+  <div class="grid md:grid-cols-3 gap-10">
+
+    <div class="bg-gray-900 rounded-2xl p-6 shadow-lg">
+      <p class="text-lg italic text-gray-300 mb-4">“SentinelStack gav oss full kontroll på mindre än en dag – och hjälpte oss undvika stora compliance-risken.”</p>
+      <div class="text-sm font-semibold text-gray-500">– CTO, MedTech-bolag</div>
+    </div>
+
+    <div class="bg-gray-900 rounded-2xl p-6 shadow-lg">
+      <p class="text-lg italic text-gray-300 mb-4">“Äntligen ett verktyg som inte bara varnar, utan faktiskt löser problemet. Vi sover bättre nu.”</p>
+      <div class="text-sm font-semibold text-gray-500">– Säkerhetschef, AI-startup</div>
+    </div>
+
+    <div class="bg-gray-900 rounded-2xl p-6 shadow-lg">
+      <p class="text-lg italic text-gray-300 mb-4">“Utan SentinelStack hade vi aldrig klarat AI Act–revisionen. En game changer.”</p>
+      <div class="text-sm font-semibold text-gray-500">– Juridisk rådgivare, EU-konsult</div>
+    </div>
+
+  </div>
+</section>
+
+<section id="pricing" class="max-w-6xl mx-auto py-24 px-6 text-white">
+  <h2 class="text-4xl font-bold text-center mb-16">Våra Paket</h2>
+  <div class="grid md:grid-cols-3 gap-10">
+
+    <!-- Gratisplan -->
+    <div class="border border-gray-700 rounded-2xl p-8 flex flex-col bg-gradient-to-b from-gray-900 to-gray-800 shadow-lg">
+      <h3 class="text-2xl font-semibold mb-2 text-center">Gratis</h3>
+      <p class="text-4xl font-bold text-green-400 text-center mb-4">0 kr</p>
+      <p class="text-sm text-gray-400 text-center mb-6">Perfekt för att komma igång med AI compliance.</p>
+      <ul class="text-sm text-gray-300 space-y-2 mb-8">
+        <li>✓ Upp till 3 AI-projekt</li>
+        <li>✓ Grundläggande compliance-kontroller</li>
+        <li>✓ E-postsupport</li>
+      </ul>
+      <a href="#signup" class="mt-auto text-center bg-green-500 text-black font-semibold py-3 rounded-lg hover:bg-green-400 transition">Välj Gratis</a>
+    </div>
+
+    <!-- Proplan -->
+    <div class="border border-cyan-500 rounded-2xl p-8 flex flex-col bg-gradient-to-b from-gray-900 to-gray-800 shadow-cyan-500/50 shadow-lg scale-105">
+      <h3 class="text-2xl font-semibold mb-2 text-center">Pro</h3>
+      <p class="text-4xl font-bold text-cyan-300 text-center mb-4">799 kr/mån</p>
+      <p class="text-sm text-gray-400 text-center mb-6">För startups & team som vill växa med full koll.</p>
+      <ul class="text-sm text-gray-300 space-y-2 mb-8">
+        <li>✓ Upp till 10 AI-projekt</li>
+        <li>✓ Avancerade compliance-kontroller</li>
+        <li>✓ Realtids-övervakning & larm</li>
+        <li>✓ Prioriterad support</li>
+      </ul>
+      <a href="#signup" class="mt-auto text-center bg-cyan-400 text-black font-semibold py-3 rounded-lg hover:bg-cyan-300 transition">Välj Pro</a>
+    </div>
+
+    <!-- Enterpriseplan -->
+    <div class="border border-gray-700 rounded-2xl p-8 flex flex-col bg-gradient-to-b from-gray-900 to-gray-800 shadow-lg">
+      <h3 class="text-2xl font-semibold mb-2 text-center">Enterprise</h3>
+      <p class="text-4xl font-bold text-purple-300 text-center mb-4">Kontakta oss</p>
+      <p class="text-sm text-gray-400 text-center mb-6">För stora organisationer med höga krav.</p>
+      <ul class="text-sm text-gray-300 space-y-2 mb-8">
+        <li>✓ Obegränsat antal projekt</li>
+        <li>✓ Anpassade policys & integrationer</li>
+        <li>✓ Dedikerad CSM & onboarding</li>
+        <li>✓ 24/7 premiumsupport</li>
+      </ul>
+      <a href="#contact" class="mt-auto text-center bg-purple-400 text-black font-semibold py-3 rounded-lg hover:bg-purple-300 transition">Kontakta sälj</a>
+    </div>
+  </div>
+</section>
 <section id="pricing" class="max-w-6xl mx-auto py-24 px-6 text-white">
   <h2 class="text-4xl font-bold text-center mb-16">Våra Paket</h2>
   <div class="grid md:grid-cols-3 gap-10">
