--- a/index.html
+++ b/index.html
@@ -298,6 +298,25 @@
   </div>
 </section>
 
+<!-- Lead Capture Form Section -->
+<section id="lead-capture" class="max-w-2xl mx-auto py-12 px-6">
+  <form action="https://hooks.zapier.com/hooks/catch/23318877/uok1k2v/" method="POST" class="flex flex-col sm:flex-row items-center gap-4 bg-gray-900 p-6 rounded-lg shadow-md border border-cyan-500">
+    <input
+      type="email"
+      name="email"
+      required
+      placeholder="Din e‑postadress"
+      class="w-full sm:w-2/3 px-4 py-2 bg-gray-800 text-white border border-cyan-400 rounded focus:outline-none focus:ring-2 focus:ring-cyan-300"
+    />
+    <button
+      type="submit"
+      class="w-full sm:w-auto px-5 py-2 bg-cyan-400 text-black font-semibold rounded hover:bg-cyan-300 transition"
+    >
+      Ladda ner AI Act‑checklistan
+    </button>
+  </form>
+</section>
+
 <section id="testimonials" class="max-w-6xl mx-auto py-24 px-6 text-white">
   <h2 class="text-4xl font-bold text-center mb-16">Vad andra säger</h2>
   <div class="grid md:grid-cols-3 gap-10">
@@ -366,13 +385,7 @@
     </div>
   </div>
 </section>
-<section id="pricing" class="max-w-6xl mx-auto py-24 px-6 text-white">
-  <h2 class="text-4xl font-bold text-center mb-16"> </h2>
-  <div class="grid md:grid-cols-3 gap-10">
 
-    </div>
-  </div>
-</section>
 
 
 
